# AoC

./: .gitignore
AoC_19/: aoc_day1.jl  aoc_day10.jl  aoc_day11.jl  aoc_day12.jl  aoc_day13.jl  aoc_day14.jl  aoc_day16.jl  aoc_day16_2.jl  aoc_day2.jl  aoc_day20.jl  aoc_day20_2.jl  aoc_day22.jl  aoc_day3.jl  aoc_day4.jl  aoc_day5.jl  aoc_day6.jl  aoc_day7.jl  aoc_day8.jl  aoc_day9.jl  intcodeComputer.jl
AoC_20/: day01_1.jl  day02_1.jl  day03_1.jl  day04_1.jl  day05_1.jl  day06_1.jl  day07_1.jl  day08_1.jl  day09_1.jl  day10_1.jl  day11_1.jl  day11_2.jl  day11_input.txt  day12_1.jl  day12_2.jl  day13_1.jl  day14_1.jl  day14_2.jl  day15_1.jl  day15_2.jl  day16_1.jl  day16_2.jl  day17_1.jl  day17_2.jl  day18_1.jl  day18_2.jl  day19_1.jl  day19_2.jl  day20_1.jl  day20_2.jl  day21_1.jl  day22_1.jl  day22_2.jl  day23_1.jl  day23_2.jl  day24_1.jl  day24_2.jl  day25_1.jl
AoC_21/clojure_project/: CHANGELOG.md  README.md  copy.txt  project.clj
AoC_21/clojure_project/day01/clojure_project/: core_day01.clj
AoC_21/clojure_project/day02/clojure_project/: core_day02.clj
AoC_21/clojure_project/day10/: day10.jl
AoC_22/AoC_22/: Cargo.toml
AoC_22/AoC_22/src/: main.rs
AoC_22/AoC_22/src/days/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07 copy.rs  day_07.rs  day_08.rs  day_08_good.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs
AoC_22/AoC_22/src/etc/: mod.rs  utils.rs
(+28 files in other folders)
