[package]
name = "aoc_22"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.5"
ndarray = "0.15.6"
rusttype = "0.9.3"
collect_slice = "^1.2.0"
priority-queue = "1.3.0"
cached = "0.41.0"
